--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: Get Sentiment and update GitHub page
 
 on:
-  [push] #insant check
-#   schedule:
-#     - cron: "*/30 * * * *" # runs every half hour
+#   [push] #insant check
+  schedule:
+    - cron: "*/30 * * * *" # runs every half hour
     
 jobs:
   refresh_page:
